--- a/css/new.css
+++ b/css/new.css
@@ -25,6 +25,65 @@ footer p {
     margin: 1em 0;
 }
 
+/* car styling */
+
+#img-container img{
+    width: 100%;
+    height: auto;
+}
+
+#slider{
+    overflow: hidden;
+}
+#slider figure {
+    position: relative;
+    width: 500%;
+    height: auto;
+    margin: 0;
+    left: 0;
+    animation: 20s slider infinite;
+}
+#slider figure img {
+    width: 20%;
+    float: left;
+    height: 50%;
+}
+@keyframes slider{
+    0%{
+        left: 0;
+    }
+    20%{
+        left: 0;
+    }
+    25%{
+        left: -100%;
+    }
+    45%{
+        left: -100%;
+    }
+    50%{
+        left: -200;
+    }
+    70%{
+        left: -200%;
+    }
+    75%{
+        left: -300%;
+    }
+    95%{
+        left: -300%;
+    }
+    100%{
+        left: -400%;
+    }
+}
+
+
+
+/* end style */
+
+
+
 .headerColor{
     color: grey;
 }
@@ -59,7 +118,3 @@ footer p {
 }
 
 
-#img-container img{
-    width: 100%;
-    height: auto;
-}
